--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.8",
+    "tailwind": "^4.0.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
